--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: go
 go:
   - 1.8
 script: bash <(curl -sL https://gist.github.com/emersion/49d4dda535497002639626bd9e16480c/raw/codecov-go.sh)
-after_script: bash <(curl -sL https://codecov.io/bash)
+after_script: bash <(curl -sL https://codecov.io/bash); rm -f coverage.txt
 after_success: test -n "$TRAVIS_TAG" && curl -sL https://git.io/goreleaser | bash
